samples/_failures_safe/1761592927_3627c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38b45d06.c: In function ‘main’:
./samples/SAFE/__tmp_38b45d06.c:135:30: error: missing terminating " character
  135 |     mat2.cols = read_integer("
      |                              ^
./samples/SAFE/__tmp_38b45d06.c:135:5: error: expected expression at end of input
  135 |     mat2.cols = read_integer("
      |     ^~~~
./samples/SAFE/__tmp_38b45d06.c:135:17: error: too few arguments to function ‘read_integer’
  135 |     mat2.cols = read_integer("
      |                 ^~~~~~~~~~~~
./samples/SAFE/__tmp_38b45d06.c:22:5: note: declared here
   22 | int read_integer(const char* prompt, int min_val, int max_val) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_38b45d06.c:135:5: error: expected declaration or statement at end of input
  135 |     mat2.cols = read_integer("
      |     ^~~~
